--- a/bentota.html
+++ b/bentota.html
@@ -33,7 +33,7 @@
                         <li><a href="#">Bentota</a></li>
                     </ul>
                 </li>
-                <li><a href="donate.html">Donate Fuck</a></li>
+                <li><a href="donate.html">Donate</a></li>
             </ul>
         </nav>
     </header>
