--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </section>
 
     <!-- seventh main section -->
-    <section class="seventh-section">
+    <!-- <section class="seventh-section">
         <div class="seventh-section-header">
             <div class="seventh-section-header-title">
                 <h2>Turtle hatcheries in sri lanka</h2>
@@ -239,7 +239,7 @@
                 <a href="#seventh-section-slide-3"></a>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- eighth main section -->
     <section class="eighth-section">
