--- a/hikkaduwa.html
+++ b/hikkaduwa.html
@@ -198,7 +198,7 @@
                     <div class="footer-list">
                         <ul>
                             <h4>Pages</h4>
-                            <li><a href="#">Homes</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="donate.html">Donate</a></li>
                         </ul>
                     </div>
