--- a/hikkaduwa.html
+++ b/hikkaduwa.html
@@ -66,6 +66,13 @@
             <p>But Hikkaduwa is not just for surf enthusiasts. Beneath its turquoise waters lies a vibrant underwater world teeming with life, making it a haven for snorkelers and divers. The coral reefs, adorned with a kaleidoscope of colorful fish and mesmerizing marine creatures, create a mesmerizing spectacle that beckons exploration.</p>
             <br>
             <div class="hikkaduwa-first-button-container">
+                <button class="button-for-all">
+                    <a href="tickets.html">
+                        <span>
+                            Buy Tickets
+                        </span>
+                    </a>
+                </button>
                 <button class="button-for-all" onclick="location.href='#hikkaduwa-third-id'">
                     <span>
                         What's in Hikkaduwa?
