--- a/tickets.html
+++ b/tickets.html
@@ -118,11 +118,11 @@
                 </tr>
                 <tr>
                     <td>Time</td>
-                    <td colspan="2" class="table-count-price-td js-table-time">N/A</td>
+                    <td colspan="2" class="table-count-price-td js-table-time"></td>
                 </tr>
                 <tr>
                     <td>Duration</td>
-                    <td colspan="2" class="table-count-price-td js-table-duration">3 hrs ( 02 Normal : 01 Peak)</td>
+                    <td colspan="2" class="table-count-price-td js-table-duration"></td>
                 </tr>
                 <tr class="middle-title">
                     <td>Category</td>
