--- a/hikkaduwa.html
+++ b/hikkaduwa.html
@@ -41,7 +41,7 @@
     <div class="main-viewport">
         <div class="main-viewport-images">
             <div>
-                <img class="main-viewport-image" src="images/pexels-malinda-bandara-16508231.jpg" alt="">
+                <img class="main-viewport-image" src="images/pexels-malinda-bandara-16508231.webp" alt="">
             </div>
         </div>
         <div class="main-viewport-header">
