--- a/tickets.html
+++ b/tickets.html
@@ -17,8 +17,8 @@
     <title>tickets</title>
 
     <script type="module" src="/scripts/calendar.js" defer></script>
-    <script type="module" src="/scripts/tickets.js" defer></script>
     <script type="module" src="/scripts/dropdown.js" defer></script>
+    <script type="module" src="/scripts/tickets.js" defer></script>
 </head>
 <body>
     <header>
@@ -46,7 +46,7 @@
     <div class="ticket-main-viewport">
         <div class="ticket-main-viewport-images">
             <div>
-                <img class="ticket-main-viewport-image" src="images/pexels-malinda-bandara-16508231.jpg" alt="">
+                <img class="ticket-main-viewport-image" src="images/pexels-malinda-bandara-16508231.webp" alt="">
             </div>
         </div>
         <div class="ticket-main-viewport-header">
@@ -113,8 +113,7 @@
                     <tr>
                         <td>Sri Lankan Adults</td>
                         <td class="table-count-price-td js-table-sla-1000-count"></td>
-                        <td class="table-count-price-td js-table-sla-1000-price"></td>
-                        
+                        <td class="table-count-price-td js-table-sla-1000-price"></td>  
                     </tr>
                     <tr>
                         <td>Sri Lankan Child</td>
