--- a/tickets.html
+++ b/tickets.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
 
-    <script type="module" src="/scripts/ticket_scripts/calendar.js" defer></script>
-    <script type="module" src="/scripts/ticket_scripts/dropdown.js" defer></script>
-    <script type="module" src="/scripts/ticket_scripts/tickets.js" defer></script>
+    <script type="module" src="/scripts/ticket_scripts/calendar.js"></script>
+    <script type="module" src="/scripts/ticket_scripts/dropdown.js"></script>
+    <script type="module" src="/scripts/ticket_scripts/tickets.js"></script>
 </head>
 <body>
     <header>
@@ -92,7 +92,7 @@
             <div class="ticket-duration-main-container">
                 <div class="ticket-dropdown-duration-main-container">
                     <div class="multiselect">
-                        <div class="select-box" ">
+                        <div class="select-box">
                             <span class="selected-text">Select Time Slots</span>
                             <span id="toggle-icon" class="material-symbols-rounded">expand_circle_down</span>
                         </div>
