--- a/tickets.html
+++ b/tickets.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
 
-    <script type="module" src="/scripts/ticket_scripts/calendar.js"></script>
-    <script type="module" src="/scripts/ticket_scripts/dropdown.js"></script>
-    <script type="module" src="/scripts/ticket_scripts/tickets.js"></script>
+    <script type="module" src="/scripts/ticket_scripts/calendar.js" defer></script>
+    <script type="module" src="/scripts/ticket_scripts/dropdown.js" defer></script>
+    <script type="module" src="/scripts/ticket_scripts/tickets.js" defer></script>
 </head>
 <body>
     <header>
