--- a/tickets.html
+++ b/tickets.html
@@ -38,7 +38,7 @@
                         <li><a href="bentota.html">Bentota</a></li>
                     </ul>
                 </li>
-                <li><a href="donate.html">Donate</a></li>
+                <li><a href="donate.html">Donat</a></li>
             </ul>
         </nav>
     </header>
