--- a/tickets.html
+++ b/tickets.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
 
-    <script type="module" src="/js/ticket_scripts/calendar.js" defer></script>
+    <script type="text/javascript" src="/js/ticket_scripts/calendar.js" defer></script>
     <script type="module" src="/js/ticket_scripts/dropdown.js" defer></script>
     <script type="module" src="/js/ticket_scripts/tickets.js" defer></script>
 </head>
