--- a/tickets.html
+++ b/tickets.html
@@ -171,9 +171,9 @@
         <button id="confirm-button" class="confirm-button js-confirm-button" disabled>Confirm</button>
     </section>
     
-    <script type="module" src="/js/ticket_scripts/calendar.js" defer></script>
-    <script type="module" src="/js/ticket_scripts/dropdown.js" defer></script>
-    <script type="module" src="/js/ticket_scripts/tickets.js" defer></script>
+    <script type="module" src="/js/ticket_scripts/calendar.js"></script>
+    <script type="module" src="/js/ticket_scripts/dropdown.js"></script>
+    <script type="module" src="/js/ticket_scripts/tickets.js"></script>
 
     <footer>
         <div class="footer-main">
