--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
         <title>tickets</title>
         
-        <script type="module" src="/js/confirmation_scripts/confirm.js" defer></script>
+        <script type="module" src="/assets/js/confirm.js" defer></script>
     </head>
 <body>
     <header>
