--- a/tickets.html
+++ b/tickets.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <script type="module" src="../js/ticket_scripts/calendar.js" defer></script>
-    <script type="module" src="../js/ticket_scripts/dropdown.js" defer></script>
-    <script type="module" src="../js/ticket_scripts/tickets.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +16,10 @@
     <link rel="icon" href="icons/turtleicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
+
+    <script type="module" src="/assets/js/calendar.js" defer></script>
+    <script type="module" src="/assets/js/dropdown.js" defer></script>
+    <script type="module" src="/assets/js/tickets.js" defer></script>
 </head>
 <body>
     <header>
