--- a/tickets.html
+++ b/tickets.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script type="module" src="../assets/js/calendar.js" defer></script>
+    <script type="module" src="/assets/js/dropdown.js" defer></script>
+    <script type="module" src="/assets/js/tickets.js" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -17,9 +21,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
 
-    <script type="module" src="/assets/js/calendar.js" defer></script>
-    <script type="module" src="/assets/js/dropdown.js" defer></script>
-    <script type="module" src="/assets/js/tickets.js" defer></script>
 </head>
 <body>
     <header>
