--- a/tickets.html
+++ b/tickets.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script type="module" src="/assets/js/tickets.js" defer></script>
-    <script type="module" src="/assets/js/calendar.js" defer></script>
-    <script type="module" src="/assets/js/dropdown.js" defer></script>
+    <script type="module" src="assets/js/tickets.js" defer></script>
+    <script type="module" src="assets/js/calendar.js" defer></script>
+    <script type="module" src="assets/js/dropdown.js" defer></script>
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
