--- a/tickets.html
+++ b/tickets.html
@@ -172,8 +172,8 @@
         <button id="confirm-button" class="confirm-button js-confirm-button" disabled>Confirm</button>
     </section>
 
-    <script type="text/javascript" src="assets/js/my.js" defer></script>
-    <script type="module" src="assets/js/tickets.js" defer></script>
+    <script type="text/javascript" src="assets/js/myCalender.js" defer></script>
+    <script type="text/javascript" src="assets/js/myTickets.js" defer></script>
     <script type="module" src="assets/js/dropdown.js" defer></script>
 
     <footer>
