--- a/tickets.html
+++ b/tickets.html
@@ -173,7 +173,7 @@
     </section>
 
     <script type="text/javascript" src="/assets/js/myCalender.js" defer></script>
-    <script type="module" src="/assets/js/myTickets.js" defer></script>
+    <script type="text/javascript" src="/assets/js/myTickets.js" defer></script>
     <script type="module" src="/assets/js/dropdown.js" defer></script>
 
     <footer>
