--- a/tickets.html
+++ b/tickets.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
 
+    <script type="text/javascript" src="/assets/js/calendar.js" defer></script>
+    <script type="text/javascript" src="/assets/js/tickets.js" defer></script>
+    <script type="module" src="/assets/js/dropdown.js" defer></script>
+
 </head>
 <body>
     <header>
@@ -171,10 +175,6 @@
     <section class="confirm-button-main-conatainer">
         <button id="confirm-button" class="confirm-button js-confirm-button" disabled>Confirm</button>
     </section>
-
-    <script type="text/javascript" src="/assets/js/myCalender.js" defer></script>
-    <script type="text/javascript" src="/assets/js/myTickets.js" defer></script>
-    <script type="module" src="/assets/js/dropdown.js" defer></script>
 
     <footer>
         <div class="footer-main">
