--- a/tickets.html
+++ b/tickets.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>tickets</title>
 
-    <script type="module" src="assets/js/calendar.js" defer></script>
-    <script type="module" src="assets/js/dropdown.js" defer></script>
-    <script type="module" src="assets/js/tickets.js" defer></script>
+    <script type="module" src="./assets/js/calendar.js" defer></script>
+    <script type="module" src="./assets/js/tickets.js" defer></script>
+    <script type="module" src="./assets/js/dropdown.js" defer></script>
 </head>
 <body>
     <header>
