--- a/payment.html
+++ b/payment.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
         <title>tickets</title>
 
-        <script type="module" src="/assets/js/payment.js" defer></script>
-        <script type="module" src="/assets/js/detail_form.js" defer></script>
+        <script type="module" src="assets/js/payment.js" defer></script>
+        <script type="module" src="assets/js/detail_form.js" defer></script>
     </head>
 <body>
     <header>
