--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="third-section-item">
-                <img class="thumbnail" src="images/Olive Ridley.jpg" alt="">
+                <img class="thumbnail" src="images/Olive-Ridley.webp" alt="">
                 <div>
                     <span class="third-section-text">Olive Ridley</span>
                 </div>
