--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,8 @@
 
     <link rel="icon" href="icons/turtleicon.ico" type="image/x-icon">
     <title>gallery</title>
+
+    <script type="module" src="assets/js/gallery.js" defer></script>
 </head>
 <body>
     <header>
@@ -41,64 +43,106 @@
     <section class="gallery-main">
         <div class="gallery-main-container">
             <div class="wide">
-                <img src="thumbnails/zdenek-machacek-IgIdrCy0VxI-unsplash.jpg" alt="">
-            </div>
-            <div class="tall">
-                <img src="thumbnails/Green Sea.jpg" alt="">
-            </div>
-            <div class="big">
-                <img src="thumbnails/hikkaduwa2.jpg" alt="">
-            </div>
-            <div class="tall">
-                <img src="thumbnails/Leatherback.jpg" alt="">
-            </div>
-            <div class="wide">
-                <img src="thumbnails/Loggerhead Turtle.jpg" alt="">
-            </div>
-            <div class="tall">
-                <img src="thumbnails/Hawksbill Turtle.jpg" alt="">
-            </div>
-            <div class="big">
-                <img src="thumbnails/pexels-malinda-bandara-16508231.jpg" alt="">
-            </div>
-            <div class="wide">
-                <img src="thumbnails/Olive Ridley.jpg" alt="">
-            </div>
-            <div>
-                <img src="thumbnails/poaching restore.jpg" alt="">
-            </div>
-            <div class="wide">
-                <img src="thumbnails/bentota3.jpg" alt="">
-            </div>
-            <div class="big">
-                <img src="thumbnails/kosgoda 3.jpg" alt="">
+                <img src="thumbnails/habitat restore.jpg" alt="">
             </div>
             <div class="tall">
                 <img src="thumbnails/habitat loss.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/qwe.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/pollution restore.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/david-troeger-9XzyEzPAHMI-unsplash.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/Olive Ridley.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/Loggerhead Turtle.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/Leatherback.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/Hawksbill Turtle.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/zdenek-machacek-IgIdrCy0VxI-unsplash.jpg" alt="">
+            </div>
+            <div class="big">
+                <img src="thumbnails/turtle1.jpg" alt="">
+            </div>
+            <div class="tall">
+                <img src="thumbnails/qwert.jpg" alt="">
             </div>
             <div>
                 <img src="thumbnails/qwert.jpg" alt="">
             </div>
             <div class="tall">
-                <img src="thumbnails/habitat restore.jpg" alt="">
-            </div>
-            <div class="big">
-                <img src="thumbnails/climate restore.jpg" alt="">
-            </div>
-            <div class="wide">
                 <img src="thumbnails/kosgoda 4.jpg" alt="">
             </div>
-            <div>
-                <img src="thumbnails/turtle1.jpg" alt="">
+            <div class="big">
+                <img src="thumbnails/kosgoda 3.jpg" alt="">
+            </div>
+            <div class="wide">
+                <img src="thumbnails/kosgoda 6.jpg" alt="">
             </div>
             <div>
-                <img src="thumbnails/pollution restore.jpg" alt="">
+                <img src="thumbnails/hikkaduwa2.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/poaching restore.jpg" alt="">
             </div>
             <div class="tall">
-                <img src="thumbnails/david-troeger-9XzyEzPAHMI-unsplash.jpg" alt="">
+                <img src="thumbnails/Green Sea.jpg" alt="">
             </div>
             <div>
-                <img src="thumbnails/qwe.jpg" alt="">
+                <img src="thumbnails/pexels-malinda-bandara-16508231.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/climate restore.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/bentota3.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/bentota 3.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-jolo-diaz-3661926.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-ludvig-hedenborg-5791753.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-jorge-acre-17062001.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-charlotte-youlten-4973967.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-felipe-helfstein-14549858.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-logan-hansen-5104735.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-chris-f-8026855.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-daniel-torobekov-14322467.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-daniel-torobekov-8710945.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-ró-&-photography-16638990.jpg" alt="">
+            </div>
+            <div>
+                <img src="thumbnails/pexels-bruno-curly-17015055.jpg" alt="">
             </div>
         </div>
     </section>
