--- a/tickets.html
+++ b/tickets.html
@@ -112,6 +112,8 @@
                 <hr><br>
             </div> -->
             <table class="main-table">
+                <div class="circle"></div>
+                <div class="circle"></div>  
                 <tbody class="js-table-category-row">
                     <tr>
                         <td>Date</td>
