--- a/payment.html
+++ b/payment.html
@@ -79,7 +79,7 @@
                         <input type="text" name="cvv-text" id="cvv-text" maxlength="4" placeholder="1234" required onkeypress="return event.charCode >= 48 && event.charCode <= 57">
                         </div>
                     </div>
-                        <input type="submit" value="PAY $" id="add">
+                        <input type="submit" value="PAY $" id="add" class="payment-confirm">
                     </form>
                 </div>
 
